# poshbuddy

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  GEMINI.md  LICENSE  PoshBuddy.ps1  README.md  SECURITY.md  commit_helper.py  compose.yaml  demo.cast  demo.tape  docs-assembler-config.json  openssf_audit.md  package-lock.json  package.json  patch.diff  patch_app.diff  patch_diagnostic.diff  plan.md  pr_desc.md  pr_description.md  pr_script.py  qp_audit.md  refactor.py
.agents/skills/: algorithmic-art  brand-guidelines  internal-comms  mcp-builder  nodejs-backend-patterns  pdf  playwright-best-practices  rust-best-practices  seo  slack-gif-creator  stop-slop  template  theme-factory  web-artifacts-builder  webapp-testing  xlsx
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/debug-session-reports/: issue-1.md  issue-2.md
.github/workflows/: codeql-analysis.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  release.yml  rust-clippy.yml  rust.yml  security.yml
.jules/: bolt.md  palette.md
.trunk/: trunk.yaml
codeql-custom-queries-actions/: codeql-pack.yml
docs/: MEMORY.md  demo.cast  demo.tape  index.css  index.html
docs/artifacts/: code_review.md  impl_plan_s1.md  implementation_plan_s2.md  implementation_plan_s3.md  implementation_plan_s4.md  implementation_plan_s5.md  implementation_plan_s6_plugins.md  task.md  walkthrough_0_3.md  walkthrough_0_4.md  walkthrough_0_5.md
docs/superpowers/plans/: 2026-04-05-nerd-font-validator.md  2026-04-05-rust-port.md
docs/wiki/: commands.md  index.md  installation.md  troubleshooting.md  usage.md
olds/: PoshBuddy.ps1
packaging/aur/: PKGBUILD
src/: api.rs  app.rs  assets.rs  backup.rs  cli.rs  diagnostic.rs  main.rs  plugin_installer.rs  ui.rs  ui.rs.orig
src/app/: handlers.rs  mod.rs  models.rs  services.rs
src/ui/: components.rs  fonts.rs  mod.rs  segments.rs  tests.rs  themes.rs  welcome.rs
